Fixing issue with collapse in navbar

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,16 @@
 body {
   background-color: #f5d9d5;
+  font-family: 'Nunito', sans-serif;
+}
+
+#mainNavbar .navbar-brand {
+  color: #EA1C2C;
+}
+#mainNavbar .nav-link {
+  color: #white;
+}
+#mainNavbar .nav-link:hover {
+  color: #EA1C2C;
 }
 h1 {
   font-size:  5.625rem;
